@@ -40,7 +40,7 @@ inputs:
 #     access_token: ""
 #     kibana:
 #       # kibana minimal configuration
-#       host: "localhost:5601"
+#       hosts: ["localhost:5601"]
 #       ssl.certificate_authorities: ["/etc/pki/root/ca.pem"]
 
 #       # optional values
